--- a/portfolio-web/package.json
+++ b/portfolio-web/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AlexandreDoneux.github.io/Portfolio/#",
+  "homepage": "http://alexandredoneux.github.io/Portfolio",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
